Creacion del aside

--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,13 @@ body {
     border-style: solid;
     border-width: 2px;
 }
+
+.side-header {
+    background: #343a40;
+    color: #FFFFFF;
+    border-radius: 2px;
+}
+
+img {
+    border-radius: 5px;
+}
